# aureus-core-gui

./: .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  configure.ac  libaureusconsensus.pc.in
.tx/: config
build-aux/m4/: aureus_find_bdb48.m4  aureus_qt.m4  aureus_subdir_to_include.m4
contrib/: README.md  aureus-cli.bash-completion  aureus-qt.pro  aureus-tx.bash-completion  aureusd.bash-completion  gitian-build.sh  tidy_datadir.sh
contrib/debian/: README.md  aureus-qt.desktop  aureus-qt.install  aureus-qt.lintian-overrides  aureus-qt.manpages  aureus-qt.protocol  aureus-tx.install  (+12 more)
depends/: README.md  description.md
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  aureus-cli-res.rc  aureus-cli.cpp  aureus-tx-res.rc  aureus-tx.cpp  aureusd-res.rc  aureusd.cpp  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  hash.h  httprpc.h  (+59 more)
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  aureus.cpp  aureus.qrc  aureus_locale.qrc  aureusaddressvalidator.cpp  aureusaddressvalidator.h  aureusamountfield.cpp  aureusamountfield.h  aureusgui.cpp  aureusgui.h  aureusstrings.cpp  aureusunits.cpp  aureusunits.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  (+52 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: aureus_af.ts  aureus_af_ZA.ts  aureus_ar.ts  aureus_be_BY.ts  aureus_bg.ts  aureus_bg_BG.ts  aureus_ca.ts  aureus_ca@valencia.ts  aureus_ca_ES.ts  aureus_cs.ts  aureus_cy.ts  aureus_da.ts  aureus_de.ts  aureus_el.ts  aureus_el_GR.ts  aureus_en.ts  aureus_en_GB.ts  aureus_eo.ts  aureus_es.ts  aureus_es_AR.ts  aureus_es_CL.ts  aureus_es_CO.ts  aureus_es_DO.ts  aureus_es_ES.ts  aureus_es_MX.ts  aureus_es_UY.ts  aureus_es_VE.ts  aureus_et.ts  aureus_et_EE.ts  aureus_eu_ES.ts  aureus_fa.ts  aureus_fa_IR.ts  aureus_fi.ts  aureus_fr.ts  aureus_fr_CA.ts  aureus_fr_FR.ts  aureus_gl.ts  aureus_he.ts  aureus_hi_IN.ts  aureus_hr.ts  (+46 more)
src/qt/res/: aureus-qt-res.rc
src/qt/test/: compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: aureusconsensus.cpp  aureusconsensus.h  interpreter.cpp  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_aureus_NativeSecp256k1.c  org_aureus_NativeSecp256k1.h  org_aureus_Secp256k1Context.c  org_aureus_Secp256k1Context.h
src/secp256k1/src/java/org/aureus/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  (+22 more)
src/test/data/: README.md
src/univalue/lib/: univalue_escapes.h
src/wallet/: coincontrol.h  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
test/: README.md
(+158 files in other folders)
